* Suppress scanners in the API
